<resources>
    <string name="app_name">SmetaElectro</string>
    <string name="title_home">В начало</string>
    <string name="title_smeta">Смета</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_smeta_type">SmetaType</string>
    <string name="Saved">Saved</string>
    <string name="title_smetas">Сметы</string>
    <string name="title_costs">Расценки</string>
    <string name="title_activity_smetas">Smetas</string>
    <string name="action_settings">Настройки</string>
    <string name="action_struct">Структура</string>
    <string name="action_send">Поделиться</string>
    <string name="action_delete">Удалить</string>
    <string name="action_cancel">Отмена</string>
    <string name="action_change_name">Изменить</string>
    <string name="action_add">Добавить </string>
    <string name="action_detail">Подробности</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_smetas1">Сметы</string>
    <string name="title_activity_details">Добавить/изменить пункт</string>
    <string name="title_activity_ListOfSmetasNames">Сметы</string>
    <string name="title_activity_SmetaNewCategory">Выбор категории </string>
    <string name="title_activity_SmetaNewType">Выбор типа работы</string>
    <string name="title_activity_SmetaNewWork">Выбор работы </string>
    <string name="title_activity_SmetaNewName">Новая смета</string>
    <string name="title_activity_CostCategory">Расценки: категории работ</string>
    <string name="title_activity_CostType">Расценки: типы работ</string>
    <string name="title_activity_CostWork">Расценки: виды работ</string>
    <string name="title_activity_CostDetail">Цена</string>
    <string name="title_activity_changeDataFile">Изменение</string>
    <string name="title_activity_SmetaListStructured">Подробно</string>
    <string name="title_activity_MatActivity">Материалы</string>
    <string name="title_activity_SmetasMatCost">Цены на материалы</string>
    <string name="title_activity_CategoryMatSpecific">Подробности</string>
    <string name="title_activity_CategorySpecific">Подробности</string>
    <string name="DeleteYesNo">Удалить все пункты данной сметы?</string>
    <string name="CostZero">Цена не указана</string>
    <string name="DeleteCategory">Удалить эту категорию?</string>
    <string name="DeleteType">Удалить этот тип работ?</string>
    <string name="DeleteKind">Удалить этот вид работ?</string>
    <string name="Delete">Удалить?</string>
    <string name="DeleteYes">Да</string>
    <string name="CostOk">Указать</string>
    <string name="DeleteNo">Нет</string>
    <string name="Delete_Item">Удалить пункт?</string>
    <string name="tab_text_1">Работа</string>
    <string name="tab_text_2">Материалы</string>
    <string name="tab_text_1_mat">Категория</string>
    <string name="tab_text_3_mat">Название</string>
    <string name="tab_text_2_mat">Тип</string>
    <string name="tab_text_1_mat_cost">Тип материала</string>
    <string name="tab_text_2_mat_cost">Название материала</string>
    <string name="complex_list">Данные</string>
    <string name="complex_list_group">Работа</string>
    <string name="ru_rub"> руб</string>
    <string name="count_sht">шт</string>
    <string name="smetas_name">Название сметы</string>
    <string name="smetas_name_on_bar">Смета</string>
    <string-array name="category_name">
        <item>Электромонтаж</item>
        <item>Другие работы</item>
    </string-array>
    <string name="type_name">Название типа работы </string>
    <string name="type_work">Название работы </string>
    <string name="type_hint_name">Тип работы </string>
    <string name="date_creation">Дата и время создания</string>
    <string name="date_time">Дата и время</string>
    <string name="adress">Адрес объекта</string>
    <string name="adress_no">Без адреса</string>
    <string name="description">Опиcание</string>
    <string name="name">Название</string>
    <string name="description_category">Опиcание категории</string>
    <string name="description_type">Опиcание типа работы</string>
    <string name="description_no">Без описания</string>
    <string name="ok">OK</string>
    <string name="action_create_add_name">Добавить</string>
    <string name="work_hint_name">Работа</string>
    <string name="description_work">Описание работы</string>
    <string name="smeta_of_work">Смета на работу</string>
    <string name="itogo_of_work">За работу:   </string>
    <string-array name="MenuMain">
        <item>Оценочная смета на работу</item>
        <item>Оценочная смета на материалы</item>
        <item>Смета на работу</item>
        <item>Смета на материалы</item>
    </string-array>
    <string-array name="category_name_mat">
        <item>Электрика</item>
        <item>Другие материалы</item>
    </string-array>
    <string-array name="category_descr">
        <item>Электрика и слаботочка</item>
        <item>Работы, не имеющие отношения к электрике</item>
    </string-array>
    <string-array name="category_descr_mat">
        <item>Материлы для электрики и слаботочки</item>
        <item>Другие материалы для ремонта</item>
    </string-array>
    <string-array name="type_name_electro">
        <item>Демонтаж</item>
        <item>Подготовительные работы</item>
        <item>Пробивка штроб и отверстий под коробки</item>
        <item>Прокладка кабеля</item>
        <item>Установка и расключение коробок</item>
        <item>Сверление отверстий</item>
        <item>Работа со щитом</item>
        <item>Установка розеток и выключателей</item>
        <item>Установка и подключение светильников</item>
        <item>Светодиодная подсветка</item>
        <item>Установка и подключение оборудования</item>
        <item>Сопутствующие работы</item>
        <item>Примечания к смете</item>
    </string-array>
    <string-array name="type_name_electro_mat">
        <item>Кабели, гофра</item>
        <item>Кабель-каналы, лотки, перфокороба</item>
        <item>Коробки</item>
        <item>Изолента, клеммники, всё для времянок</item>
        <item>Розетки, выключатели</item>
        <item>Электрощитовое оборудование</item>
        <item>Всё для светодиодной подсветки</item>
        <item>Светильники, лампы</item>
        <item>Буры, коронки, круги</item>
        <item>Крепёж</item>
        <item>Сыпучие материалы</item>
        <item>Вспомогательные материалы</item>
    </string-array>
    <string-array name="type_descr_electro">
        <item>Демонтаж старой электропроводки и оборудования</item>
        <item>Временный щит, времянки, удлинители</item>
        <item>Пробивка штроб и отверстий под коробки</item>
        <item>Прокладка электро и слаботочного кабеля</item>
        <item>Установка и расключение монтажных и распределительных коробок</item>
        <item>Сверление отверстий в перегородках и перекрытиях</item>
        <item>Установка щита и подключение автоматов</item>
        <item>Установка розеток и выключателей</item>
        <item>Установка и подключение светильников</item>
        <item>Наклейка ленты и подключение блоков управления</item>
        <item>Установка и подключение вентиляторов, водонагревателей, электроплиты и т.д.</item>
        <item>Разработка монтажной схемы, покупка материалов, пусконаладка и т.п.</item>
        <item>Условия, при которых написана смета</item>
    </string-array>
    <string-array name="type_name_drugoe">
        <item>Вынос мусора</item>
        <item>Покупка материалов</item>
    </string-array>
    <string-array name="type_name_drugoe_mat">
        <item>Электроинструмент</item>
        <item>Общестроительные материалы</item>
    </string-array>
    <string-array name="type_descr_drugoe">
        <item>Вынос мусора с объекта</item>
        <item>Покупка материалов по смете</item>
    </string-array>
    <string-array name="work_name_type_musor">
        <item>Вынос мусора с лифтом</item>
        <item>Вынос мусора без лифта</item>
    </string-array>
    <string-array name="work_name_type_tovary">
        <item>Покупка материалов </item>
        <item>Разгрузка и подъём </item>
    </string-array>
    <string-array name="mat_name_type_kabeli">
        <item>Кабель ВВГ нг LS  5х10 кв.мм.</item>
        <item>Кабель ВВГ нг LS  5х6 кв.мм.</item>
        <item>Кабель ВВГ нг LS  5х4 кв.мм.</item>
        <item>Кабель ВВГ нг LS  5х2.5 кв.мм.</item>
        <item>Кабель ВВГ нг LS  5х1.5 кв.мм.</item>
        <item>Кабель ВВГ нг LS  5х0.75 кв.мм.</item>
        <item>Кабель ВВГ нг LS  4x2,5кв.мм.</item>
        <item>Кабель ВВГ нг LS  4x1,5кв.мм.</item>
        <item>Кабель ПВС  4x0.75кв.мм.</item>
        <item>Кабель ВВГ нг LS  3x6кв.мм.</item>
        <item>Кабель ВВГ нг LS  3x4кв.мм.</item>
        <item>Кабель ВВГ нг LS  3x2.5кв.мм.</item>
        <item>Кабель ВВГ нг LS  3x1.5кв.мм.</item>
        <item>Кабель ПВС  3x0.75кв.мм.</item>
        <item>Кабель ВВГ нг LS  2x2.5кв.мм.</item>
        <item>Кабель ВВГ нг LS  2x1.5кв.мм.</item>
        <item>Кабель ПВС  2x0.75кв.мм.</item>
        <item>Провод для саун РКГМ 4.0 кв мм </item>
        <item>Провод для саун РКГМ 1.5 кв мм </item>
        <item>Провод ПВ3х10 кв мм белый</item>
        <item>Провод ПВ3х10 кв мм синий</item>
        <item>Провод ПВ3х10 кв мм желто-зелёный</item>
        <item>Провод ПВ3х6 кв мм белый</item>
        <item>Провод ПВ3х6 кв мм синий</item>
        <item>Провод ПВ3х6 кв мм желто-зелёный</item>
        <item>Провод ПВ3х4 кв мм белый</item>
        <item>Провод ПВ3х4 кв мм синий</item>
        <item>Провод ПВ3х4 кв мм желто-зелёный</item>
        <item>Кабель ВБШв 5х6ок(N,PE)-0,66 </item>
        <item>Кабель  телевизионный SAT 703</item>
        <item>Комп.  провод UTP кат 5Е</item>
        <item>Провод телефонный</item>

        <item>Крепёж для кабеля круглый диаметром 6 мм</item>
        <item>Крепёж для кабеля круглый диаметром 8 мм</item>
        <item>Крепёж для кабеля круглый диаметром 10 мм</item>
        <item>Крепёж для кабеля плоский 6 мм</item>
        <item>Крепёж для кабеля плоский 8 мм</item>
        <item>Крепёж для кабеля плоский 10 мм</item>
        <item>Крепёж для кабеля петлевой 6-10 мм</item>
        <item>Крепёж для кабеля петлевой 8-12 мм</item>
        <item>Крепёж для кабеля петлевой 10-14 мм</item>
    </string-array>
    <string name="title_activity_SmetasWork">Работа</string>
</resources>