<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_add"
        android:title="@string/action_create_add_name"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="10"
        app:showAsAction="always" />

    <item android:id="@+id/action_send"
        android:orderInCategory="20"
        android:icon="@drawable/ic_send_black_24dp"
        android:title="@string/action_send"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>